--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -17,8 +17,8 @@
 <body>
   <header class="header">
     <div class="container">
-      <div class="brand">
-        <a href="/" style="text-decoration: none; display: flex; align-items: center;">
+      <div class="brand-group">
+        <a class="brand" href="/">
             <img src="/logo.svg" alt="CusImage Logo" class="logo-icon">
             <h1 class="title">CusImage</h1>
         </a>
