--- a/turn-images-into-unicode.html
+++ b/turn-images-into-unicode.html
@@ -13,7 +13,6 @@
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2211656389763853" crossorigin="anonymous"></script>
     <link rel="canonical" href="https://www.cusimage.com/turn-images-into-unicode">
     <link rel="stylesheet" href="unicode.css">
-    <link href="https://fonts.googleapis.com/css2?family=VT323&display=swap" rel="stylesheet">
     <link rel="alternate" hreflang="en" href="https://www.cusimage.com/turn-images-into-unicode">
     <meta property="og:title" content="Image to Unicode & ASCII Art Converter - Text Art Generator">
     <meta property="og:description" content="Convert any image into Unicode text art and ASCII characters. Copy and paste text art for social media, comments, and coding projects. Free online converter.">
@@ -44,24 +43,24 @@
 <body>
     <header class="header">
         <div class="container">
-            <div class="brand">
-                <a href="/" style="text-decoration: none; display: flex; align-items: center;">
+            <div class="brand-group">
+                <a class="brand" href="/">
                     <img src="/logo.svg" alt="CusImage Logo" class="logo-icon">
                     <h1 class="title">CusImage</h1>
                 </a>
-                <p class="subtitle" style="font-family: 'VT323'; color: var(--pixel-secondary); margin-left: 10px;">Turn Images into Unicode & ASCII Art</p>
+                <p class="subtitle">Turn Images into Unicode & ASCII Art</p>
             </div>
             <div class="nav-dropdown">
-                <a href="/pixel-art-ideas" class="nav-link">Pixel Art Ideas</a>
                 <div class="dropdown-container">
                     <span class="nav-link dropdown-trigger">Tools ▼</span>
                     <div class="dropdown-content">
-                        <a href="/pixel-editor" class="dropdown-item">Pixel Editor</a>
                         <a href="/turn-image-into-pixel-art" class="dropdown-item">Image to Pixel</a>
                         <a href="/turn-images-into-unicode" class="dropdown-item">Unicode Art</a>
+                        <a href="/image-dpi-converter" class="dropdown-item">Image DPI Converter</a>
+                        <a href="/convert-jpeg-to-jpg" class="dropdown-item">JPEG to JPG</a>
                     </div>
                 </div>
-                <div id="user-widget-container" style="display: inline-block; margin-left: 20px;"></div>
+                <div id="user-widget-container"></div>
             </div>
         </div>
     </header>
