feat: add mermaid to image converter tool and update navigation

--- a/turn-image-into-pixel-art.html
+++ b/turn-image-into-pixel-art.html
@@ -202,6 +202,7 @@
                         <a href="/turn-images-into-unicode" class="dropdown-item">Unicode Art</a>
                         <a href="/image-dpi-converter" class="dropdown-item">Image DPI Converter</a>
                         <a href="/convert-jpeg-to-jpg" class="dropdown-item">JPEG to JPG</a>
+                        <a href="/convert-mermaid-to-image" class="dropdown-item">Mermaid to Image</a>
                     </div>
                 </div>
                 <div id="user-widget-container"></div>
